Replace OneDrive uploads with Cloudinary option

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,9 @@
-# Rename this file to .env and populate with your Azure application secrets.
-CLIENT_ID=your-client-id
-TENANT_ID=your-tenant-id
-CLIENT_SECRET=your-client-secret
+# Rename this file to .env and populate with your credentials.
 # Optional: bootstrap an initial admin user.
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=change-me
 ADMIN_EMAIL=admin@example.com
-# Required: OneDrive user email where uploads are stored.
-ONEDRIVE_USER_EMAIL=admin@yourtenant.onmicrosoft.com
-# Optional: override the root folder used for uploads in OneDrive.
-ONEDRIVE_UPLOAD_ROOT=Uploads
+# Cloudinary configuration for uploads.
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
