--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ bcrypt==4.1.2
 msal==1.26.0
 pandas==2.1.4
 PyQt5==5.15.10
-python-dotenv==1.0.0
+python-dotenv==1.0.1
 requests==2.31.0
 pyinstaller==5.13.2
+cloudinary==1.36.0
