--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ python-dotenv==1.0.1
 requests==2.31.0
 pyinstaller==5.13.2
 cloudinary==1.36.0
+SQLAlchemy==2.0.29
+alembic==1.13.1
+psycopg2-binary==2.9.9
+PyJWT==2.8.0
