Refactor app to Flask with Supabase and Cloudinary

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,8 @@
-# Rename this file to .env and populate with your credentials.
-# Database connection (PostgreSQL URL format recommended).
-DATABASE_URL=postgresql://user:password@localhost:5432/industrial_data
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_KEY=your-service-role-key
 
-# Optional: bootstrap an initial admin user.
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=change-me
-ADMIN_EMAIL=admin@example.com
-
-# Authentication & security settings.
-IDS_JWT_SECRET=change-this-secret
-IDS_SESSION_TTL_MINUTES=120
-IDS_RESET_TOKEN_TTL_MINUTES=30
-
-# Optional SMTP configuration for password reset emails.
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USERNAME=smtp-user
-SMTP_PASSWORD=smtp-password
-SMTP_USE_TLS=true
-MAIL_DEFAULT_SENDER=no-reply@example.com
-
-# Cloudinary configuration for uploads.
 CLOUDINARY_CLOUD_NAME=your-cloud-name
 CLOUDINARY_API_KEY=your-api-key
 CLOUDINARY_API_SECRET=your-api-secret
+
+FLASK_SECRET_KEY=change-me
