--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-bcrypt==4.1.2
-pandas==2.1.4
-PyQt5==5.15.10
+flask==3.0.3
+supabase==2.4.0
+cloudinary==1.36.0
 python-dotenv==1.0.1
 requests==2.31.0
-pyinstaller==5.13.2
-cloudinary==1.36.0
-SQLAlchemy==2.0.29
-alembic==1.13.1
-psycopg2-binary==2.9.9
-PyJWT==2.8.0
