--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ CLOUDINARY_API_KEY=768327815567833
 CLOUDINARY_API_SECRET=vz4u_ge5sC8aNXZkhsPrs5EI_H8
 
 FLASK_SECRET_KEY=1234
+# Storage limit in MB (default: 1024 MB = 1 GB)
+# Adjust this value based on your Cloudinary plan
+STORAGE_LIMIT_MB=10240
