--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ PyQt5==5.15.10
 python-dotenv==1.0.1
 openpyxl==3.1.2
 matplotlib==3.8.2
+scipy==1.11.4
+mplcursors==0.5.3
+chardet==5.2.0
+nptdms==1.8.0
