--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,7 @@ scipy==1.11.4
 mplcursors==0.5.3
 chardet==5.2.0
 nptdms==1.8.0
-pyarrow
+pyarrow==14.0.2
+pandas==2.1.4
+scikit-learn==1.3.2
+joblib==1.3.2
