udates to autantication and password managment, with table size adjustment

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ STORAGE_LIMIT_MB=10240
 
 # Reader Security Code (REQUIRED for reader application)
 # Change this to a secure value for production
-IDS_READER_SECURITY_CODE=SecureReader2024!
+IDS_READER_SECURITY_CODE=1234
 
 # Gateway user configuration (optional - uses defaults if not set)
 IDS_GATEWAY_USER_EMAIL=gateway@local
