--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-PyQt5==5.15.10
+PyQt5~=5.15.11
 python-dotenv==1.0.1
 openpyxl==3.1.2
-matplotlib==3.8.2
+matplotlib~=3.10.7
 scipy==1.11.4
 mplcursors==0.5.3
 chardet==5.2.0
 nptdms==1.8.0
 pyarrow==14.0.2
-pandas==2.1.4
-scikit-learn==1.3.2
-joblib==1.3.2
+pandas~=2.3.3
+scikit-learn~=1.7.2
+joblib~=1.5.2
+
+numpy~=2.3.3
+dotenv~=0.9.9
+statsmodels~=0.14.5
